2007-05-16  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c:
   Fix bug when loading custom filetypes.common styles.


2007-05-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, data/filetypes.common:
   Show fold line by default (so it's clearer there are hidden lines).


2007-05-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * scintilla/ScintillaGTK.cxx:
   Fixed wrong clipboard target (closes #1711483).
 * doc/geany.docbook, src/callbacks.c:
   Hide notebooks tabs instead of sidebar when toggling additional
   widgets.
 * doc/geany.docbook, src/about.c, src/build.c, src/dialogs.c,
   src/keybindings.c, src/project.c, src/symbols.c, src/tools.c,
   src/ui_utils.c: Added many widget names to different dialogs for use
                   with custom styles. Menu items still don't work.
 * data/filetypes.common, doc/geany.docbook, src/highlighting.c:
   Applied patch from Michal Kurgan to disable separately use of global
   white space foreground and background colours (thanks).


2007-05-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/filetypes.c, src/filetypes.h:
   Add some menu separators to group filetype menu items.
   Reorder Haskell, O-Matrix, VHDL filetypes.
 * src/document.c:
   Fix removing indent spaces after switching back to tab indenting.
 * scintilla/LexHTML.cxx:
   Hopefully fix #1718532 - 'Crashes when open a special file';
   backported from Scintilla 1.73.


2007-05-12  Nick Treleaven  <nick.treleaven@btinternet.com>

 * tagmanager/sql.c:
   Fix #1717418, Hang on SQL file load.


2007-05-11  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/utils.h, src/search.c:
   Move search_get_file_list() to utils.c.
 * src/highlighting.c, src/highlighting.h, src/symbols.c:
   Load global tag files stored in ~/.geany/tags when needed.
 * doc/geany.docbook:
   Update docs for loading user tags at startup.
 * doc/geany.docbook:
   Rename 'confdialog' to 'prefs'.